ConfigurationFiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: netflix.devopscicd.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app
                port:
                  number: 80
